--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.2",
     "@pythnetwork/price-service-client": "^1.9.0",
+    "chart.js": "^4.4.3",
     "ethers": "^5.4",
     "firebase": "^10.7.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "recharts": "^2.12.7"
